--- a/style/main.css
+++ b/style/main.css
@@ -11,7 +11,7 @@
 
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
@@ -81,4 +81,14 @@ header nav a:hover{
 
 .botao i{
     margin-right: 8px;
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+
+.corrosel-filmes{
+    margin-top: 5px;
 }
